[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/HUD/bannerHanging.png" type="Texture" id=1]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GFX/HUD/lifes.png" type="Texture" id=3]
[ext_resource path="res://GFX/HUD/coin_bronze.png" type="Texture" id=4]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -290.0
margin_top = 22.0
margin_bottom = 59.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -54.0
margin_bottom = 12.0
alignment = 1

[node name="CoinCount" type="Label" parent="Control/TextureRect/HBoxContainer"]
margin_top = 15.0
margin_right = 56.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="coin_icon" type="TextureRect" parent="Control/TextureRect/HBoxContainer"]
margin_left = 60.0
margin_right = 120.0
margin_bottom = 71.0
texture = ExtResource( 4 )

[node name="LifeCount" type="Label" parent="Control/TextureRect/HBoxContainer"]
margin_left = 124.0
margin_top = 15.0
margin_right = 180.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="life_icon" type="TextureRect" parent="Control/TextureRect/HBoxContainer"]
margin_left = 184.0
margin_right = 236.0
margin_bottom = 71.0
texture = ExtResource( 3 )
